--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -1,10 +1,12 @@
-$BlueAccent: #cde7ff;
-$BlueDarkAccent: #9ed0ff;
+$LightBlueAccent: #cde7ff;
+$BlueAccent: #9ed0ff;
+$DarkBlueAccent: #0180EA;
 
 .scrollToTopButton {
     position: fixed;
     bottom: 30px;
     right: 30px;
+    z-index: 10;
 
     button{
         padding: 10px;
@@ -13,7 +15,8 @@ $BlueDarkAccent: #9ed0ff;
         box-shadow: 0px 0px 5px 0px rgba(34, 60, 80, 0.35);
 
         &:hover{
-            background-color: $BlueDarkAccent;
+            background-color: $DarkBlueAccent;
+            color: white;
         }
     }
 }
@@ -27,11 +30,11 @@ $BlueDarkAccent: #9ed0ff;
         border-radius: 50%;
         padding: 20px;
         color: black;
-        background-color: $BlueAccent;
+        background-color: $LightBlueAccent;
         box-shadow: 0px 0px 5px 0px rgba(34, 60, 80, 0.35);
         
         &:hover{
-            background-color: $BlueDarkAccent;
+            background-color: $BlueAccent;
         }
     }
 }
