--- a/src/components/HelpMap/map.scss
+++ b/src/components/HelpMap/map.scss
@@ -7,10 +7,12 @@
         .map-container {
             height: 100%;
         }
-        .map-overlay {
+        #map-coordinates {
             position: absolute;
+            bottom: 20px;
+            right: 0;
+            z-index: 1;
         }
-
         .sidebar {
             background-color: rgba(35, 55, 75, 0.9);
             color: #fff;
