--- a/src/components/HelpMap/map.scss
+++ b/src/components/HelpMap/map.scss
@@ -7,6 +7,24 @@
         .map-container {
             height: 100%;
         }
+        .map-route-info {
+            visibility: visible;
+            width: 100px;
+            position: absolute;
+            left: calc(50% - 50px);
+            top: 0;
+            display: flex;
+            flex-flow: wrap;
+            justify-content: center;
+            z-index: 1;
+
+            justify-content: center;
+            background: lightgrey;
+            font-size: 1.1em;
+            font-weight: 600;
+            border-radius: 0 0 10px 10px;
+            padding: 3px;
+        }
         #map-coordinates {
             position: absolute;
             bottom: 20px;
@@ -29,24 +47,55 @@
 
     .helpMap-geocoder {
         position: absolute;
-        display: flex;
-        flex-flow: column;
         top: 10%;
         left: 5%;
-        border-radius: 5px;
-        min-width: 250px;
-        max-width: 300px;
-        padding: 10px;
         background-color: lightgray;
         box-shadow: 0px 0px 20px 0px rgba(34, 60, 80, 0.3);
+        border-radius: 10px;
 
-        .helpMap-geocoder-field {
-            border-radius: 5px;
-            outline: none;
-            border: none;
-            margin: 10px 0;
-            font-size: 1.1em;
-            padding: 5px;
+        .helpMap-geocoder-visible {
+            .helpMap-geocoder-header {
+                height: 30px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                button {
+                    position: absolute;
+                    left: 0;          
+                    padding: 5px 10px;
+                    height: 30px;
+                    background-color: inherit;
+                    color: black;      
+                }
+                label {
+
+                }
+            }
+            .helpMap-geocoder-form {
+                display: flex;
+                flex-flow: column;
+                border-radius: 5px;
+                min-width: 250px;
+                max-width: 300px;
+                padding: 10px;
+                .helpMap-geocoder-field {
+                    border-radius: 5px;
+                    outline: none;
+                    border: none;
+                    margin: 10px 0;
+                    font-size: 1.1em;
+                    padding: 5px;
+                }
+            }
         }
+        .helpMap-geocoder-hidden {
+            button {
+                padding: 5px 10px;
+                color: black;
+                background-color: cadetblue;
+            }
+            
+        }
+
     }
 }
