--- a/src/views/home/subviews/mobile_app/mobile.scss
+++ b/src/views/home/subviews/mobile_app/mobile.scss
@@ -31,18 +31,15 @@ $BlueDarkAccent: #9ed0ff;
         }
     }
     .home-mobile-store {
-        position: relative;
-        display: flex;
-        height: 50px;
-        width: 100%;
-        margin: auto;    
-        padding: 30px 0;
-        justify-content: center;
+        position: absolute;
+        margin-top: 10px;
+        width: 300px;
+        left: calc(50% - 150px);
 
         a {
             img {
-                height: 100%;
-                // width: 100%;
+                height: 50px;
+                width: 150px;
             }
             &:active {
                 transform: scale(0.98);
