Hide.Show scroll btn

--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -14,10 +14,10 @@ $DarkBlueAccent: #0180EA;
         background-color: $BlueAccent;
         box-shadow: 0px 0px 5px 0px rgba(34, 60, 80, 0.35);
 
-        &:hover{
-            background-color: $DarkBlueAccent;
-            color: white;
-        }
+        // &:hover{
+        //     background-color: $DarkBlueAccent;
+        //     color: white;
+        // }
     }
 }
 
